...
                    }
                    .accessibilityIdentifier("more-multicrop-link")

                    NavigationLink(destination: CVPixelBufferFormatsView()) {
                        Label("CVPixelBuffer", systemImage: "camera.viewfinder")
                    }
                    .accessibilityIdentifier("more-cvpixelbuffer-link")
                }
                
                Section("Visualization") {
                    NavigationLink(destination: DrawingView()) {
                        Label("Drawing/Boxes", systemImage: "pencil.and.outline")
                    }
...
